cmake_minimum_required(VERSION 3.20)

# TonyRE project
project(TonyRE LANGUAGES C CXX)

# TonyRE common
add_library(TonyRE.Common INTERFACE)

target_include_directories(TonyRE.Common INTERFACE "Code")
target_include_directories(TonyRE.Common INTERFACE "Code/Sk")

target_compile_definitions(TonyRE.Common INTERFACE __PRETTY_FUNCTION__=__FILE__)

# Set to use C++14 without extensions
set_target_properties(TonyRE.Common PROPERTIES
	CXX_STANDARD 14
	CXX_STANDARD_REQUIRED ON
	CXX_EXTENSIONS OFF
)

# Define __NOPT_DEBUG__ if in debug build
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
	target_compile_definitions(TonyRE.Common INTERFACE __NOPT_DEBUG__)
endif()

# I'm feeling lucky, treat warnings as errors
if (MSVC)
	target_compile_definitions(TonyRE.Common INTERFACE _CRT_SECURE_NO_WARNINGS _WINSOCK_DEPRECATED_NO_WARNINGS)
	target_compile_options(TonyRE.Common INTERFACE /W4)
else()
	target_compile_options(TonyRE.Common INTERFACE -Werror)
endif()

# Compile TonyRE executable
add_executable(TonyRE WIN32
	# Com
	"Code/Com/miniaudio.cpp"
	"Code/Com/texturedecode.cpp"
	"Code/Com/texturedecode.h"

	# Core
	"Code/Core/Debug/Assert.cpp"
	"Code/Core/Debug/Checks.h"
	"Code/Core/Debug/Debug.cpp"
	"Code/Core/Debug/log.cpp"
	"Code/Core/Debug/Mem_stat.h"
	"Code/Core/Debug/Messages.h"
	"Code/Core/Debug/Module.h"
	"Code/Core/Debug/Project.h"
	"Code/Core/Debug/Signatrs.h"

	"Code/Core/List/Head.h"
	"Code/Core/List/list.cpp"
	"Code/Core/List/Node.h"
	"Code/Core/List/Search.h"

	"Code/Core/Math/geometry.cpp"
	"Code/Core/Math/geometry.h"
	"Code/Core/Math/math.cpp"
	"Code/Core/Math/math.h"
	"Code/Core/Math/matrix.cpp"
	"Code/Core/Math/matrix.h"
	# "Code/Core/Math/matrix.inl"
	"Code/Core/Math/quat.h"
	# "Code/Core/Math/quat.inl"
	"Code/Core/Math/rect.h"
	"Code/Core/Math/rot90.cpp"
	"Code/Core/Math/rot90.h"
	"Code/Core/Math/slerp.cpp"
	"Code/Core/Math/slerp.h"
	"Code/Core/Math/vector.cpp"
	"Code/Core/Math/vector.h"
	# "Code/Core/Math/vector.inl"

	"Code/Core/String/CString.cpp"
	"Code/Core/String/CString.h"
	"Code/Core/String/stringutils.cpp"
	"Code/Core/String/stringutils.h"

	"Code/Core/Support/class.cpp"
	"Code/Core/Support/class.h"
	"Code/Core/Support/Lock.h"
	"Code/Core/Support/Ref.h"
	"Code/Core/Support/support.h"

	"Code/Core/Task/Hook.h"
	"Code/Core/Task/List.h"
	"Code/Core/Task/Stack.h"
	"Code/Core/Task/Task.cpp"
	"Code/Core/Task/Task.h"
	"Code/Core/Task/Tlist.cpp"
	"Code/Core/Task/Tstack.cpp"

	"Code/Core/compress.cpp"
	"Code/Core/compress.h"
	"Code/Core/crc.cpp"
	"Code/Core/crc.h"
	"Code/Core/Debug.h"
	"Code/Core/Defines.h"
	"Code/Core/DynamicTable.cpp"
	"Code/Core/DynamicTable.h"
	"Code/Core/flags.h"
	"Code/Core/glue.h"
	"Code/Core/HashTable.h"
	"Code/Core/List.h"
	"Code/Core/log.h"
	"Code/Core/LookupTable.cpp"
	"Code/Core/LookupTable.h"
	"Code/Core/macros.h"
	"Code/Core/math.h"
	"Code/Core/singleton.h"
	"Code/Core/StringHashTable.h"
	"Code/Core/support.h"
	"Code/Core/Task.h"
	"Code/Core/thread.h"
	"Code/Core/TimestampedFlag.h"

	# Gel
	"Code/Gel/AssMan/animasset.cpp"
	"Code/Gel/AssMan/animasset.h"
	"Code/Gel/AssMan/asset.cpp"
	"Code/Gel/AssMan/asset.h"
	"Code/Gel/AssMan/assettypes.h"
	"Code/Gel/AssMan/AssMan.cpp"
	"Code/Gel/AssMan/AssMan.h"
	"Code/Gel/AssMan/cutsceneasset.cpp"
	"Code/Gel/AssMan/cutsceneasset.h"
	"Code/Gel/AssMan/NodeArrayAsset.cpp"
	"Code/Gel/AssMan/NodeArrayAsset.h"
	"Code/Gel/AssMan/refasset.cpp"
	"Code/Gel/AssMan/refasset.h"
	"Code/Gel/AssMan/skeletonasset.cpp"
	"Code/Gel/AssMan/skeletonasset.h"
	"Code/Gel/AssMan/skinasset.cpp"
	"Code/Gel/AssMan/skinasset.h"

	"Code/Gel/Collision/BatchTriColl.cpp"
	"Code/Gel/Collision/BatchTriColl.h"
	"Code/Gel/Collision/CollCache.cpp"
	"Code/Gel/Collision/CollCache.h"
	"Code/Gel/Collision/CollEnums.h"
	"Code/Gel/Collision/Collision.cpp"
	"Code/Gel/Collision/Collision.h"
	"Code/Gel/Collision/CollTriData.cpp"
	"Code/Gel/Collision/CollTriData.h"
	"Code/Gel/Collision/MovCollMan.cpp"
	"Code/Gel/Collision/MovCollMan.h"

	"Code/Gel/Components/animationcomponent.cpp"
	"Code/Gel/Components/animationcomponent.h"
	"Code/Gel/Components/avoidcomponent.cpp"
	"Code/Gel/Components/avoidcomponent.h"
	"Code/Gel/Components/bouncycomponent.cpp"
	"Code/Gel/Components/BouncyComponent.h"
	"Code/Gel/Components/CameraComponent.cpp"
	"Code/Gel/Components/CameraComponent.h"
	"Code/Gel/Components/CameraLookAroundComponent.cpp"
	"Code/Gel/Components/CameraLookAroundComponent.h"
	"Code/Gel/Components/CameraUtil.cpp"
	"Code/Gel/Components/CameraUtil.h"
	"Code/Gel/Components/carphysicscomponent.cpp"
	"Code/Gel/Components/carphysicscomponent.h"
	"Code/Gel/Components/CollideAndDieComponent.cpp"
	"Code/Gel/Components/CollideAndDieComponent.h"
	"Code/Gel/Components/collisioncomponent.cpp"
	"Code/Gel/Components/collisioncomponent.h"
	"Code/Gel/Components/emptycomponent.cpp"
	"Code/Gel/Components/emptycomponent.h"
	"Code/Gel/Components/FloatingLabelComponent.cpp"
	"Code/Gel/Components/FloatingLabelComponent.h"
	# "Code/Gel/Components/GunslingerCameraLookAroundComponent.cpp"
	# "Code/Gel/Components/GunslingerWalkCameraComponent.cpp"
	# "Code/Gel/Components/GunslingerWalkComponent.cpp"
	# "Code/Gel/Components/HorseCameraComponent.cpp"
	# "Code/Gel/Components/HorseCameraComponent.h"
	# "Code/Gel/Components/HorseComponent.cpp"
	# "Code/Gel/Components/HorseComponent.h"
	"Code/Gel/Components/InputComponent.cpp"
	"Code/Gel/Components/InputComponent.h"
	"Code/Gel/Components/lockobjcomponent.cpp"
	"Code/Gel/Components/lockobjcomponent.h"
	"Code/Gel/Components/modelcomponent.cpp"
	"Code/Gel/Components/modelcomponent.h"
	"Code/Gel/Components/ModelLightUpdateComponent.cpp"
	"Code/Gel/Components/ModelLightUpdateComponent.h"
	"Code/Gel/Components/motioncomponent.cpp"
	"Code/Gel/Components/motioncomponent.h"
	"Code/Gel/Components/MovableContactComponent.cpp"
	"Code/Gel/Components/MovableContactComponent.h"
	"Code/Gel/Components/NearComponent.cpp"
	"Code/Gel/Components/NearComponent.h"
	"Code/Gel/Components/NodeArrayComponent.cpp"
	"Code/Gel/Components/NodeArrayComponent.h"
	"Code/Gel/Components/ObjectHookManagerComponent.cpp"
	"Code/Gel/Components/ObjectHookManagerComponent.h"
	"Code/Gel/Components/ParticleComponent.cpp"
	"Code/Gel/Components/ParticleComponent.h"
	"Code/Gel/Components/PedLogicComponent.cpp"
	"Code/Gel/Components/PedLogicComponent.h"
	"Code/Gel/Components/ProximTriggerComponent.cpp"
	"Code/Gel/Components/ProximTriggerComponent.h"
	"Code/Gel/Components/RailManagerComponent.cpp"
	"Code/Gel/Components/RailManagerComponent.h"
	"Code/Gel/Components/RibbonComponent.cpp"
	"Code/Gel/Components/RibbonComponent.h"
	# "Code/Gel/Components/RiderComponent.cpp"
	# "Code/Gel/Components/RiderComponent.h"
	"Code/Gel/Components/rigidbodycomponent.cpp"
	"Code/Gel/Components/rigidbodycomponent.h"
	"Code/Gel/Components/SetDisplayMatrixComponent.cpp"
	"Code/Gel/Components/SetDisplayMatrixComponent.h"
	"Code/Gel/Components/shadowcomponent.cpp"
	"Code/Gel/Components/shadowcomponent.h"
	"Code/Gel/Components/SkaterCameraComponent.cpp"
	"Code/Gel/Components/SkaterCameraComponent.h"
	"Code/Gel/Components/skeletoncomponent.cpp"
	"Code/Gel/Components/skeletoncomponent.h"
	"Code/Gel/Components/SkitchComponent.cpp"
	"Code/Gel/Components/SkitchComponent.h"
	"Code/Gel/Components/soundcomponent.cpp"
	"Code/Gel/Components/soundcomponent.h"
	"Code/Gel/Components/specialitemcomponent.cpp"
	"Code/Gel/Components/specialitemcomponent.h"
	"Code/Gel/Components/StaticVehicleComponent.cpp"
	"Code/Gel/Components/StaticVehicleComponent.h"
	"Code/Gel/Components/StatsManagerComponent.cpp"
	"Code/Gel/Components/StatsManagerComponent.h"
	"Code/Gel/Components/StreamComponent.cpp"
	"Code/Gel/Components/StreamComponent.h"
	"Code/Gel/Components/SuspendComponent.cpp"
	"Code/Gel/Components/SuspendComponent.h"
	"Code/Gel/Components/trickcomponent.cpp"
	"Code/Gel/Components/trickcomponent.h"
	"Code/Gel/Components/TriggerComponent.cpp"
	"Code/Gel/Components/TriggerComponent.h"
	"Code/Gel/Components/vehiclecameracomponent.cpp"
	"Code/Gel/Components/vehiclecameracomponent.h"
	"Code/Gel/Components/vehiclecomponent.cpp"
	"Code/Gel/Components/vehiclecomponent.h"
	"Code/Gel/Components/VehicleSoundComponent.cpp"
	"Code/Gel/Components/VehicleSoundComponent.h"
	"Code/Gel/Components/VelocityComponent.cpp"
	"Code/Gel/Components/VelocityComponent.h"
	"Code/Gel/Components/VibrationComponent.cpp"
	"Code/Gel/Components/VibrationComponent.h"
	"Code/Gel/Components/WalkCameraComponent.cpp"
	"Code/Gel/Components/WalkCameraComponent.h"
	"Code/Gel/Components/WalkComponent.cpp"
	"Code/Gel/Components/WalkComponent.h"
	"Code/Gel/Components/WalkHangUtil.cpp"
	"Code/Gel/Components/WalkLadderUtil.cpp"
	# "Code/Gel/Components/weaponcomponent.cpp"
	# "Code/Gel/Components/weaponcomponent.h"

	"Code/Gel/Environment/terrain.cpp"
	"Code/Gel/Environment/terrain.h"

	"Code/Gel/Input/InpMan.cpp"
	"Code/Gel/Input/inpserv.cpp"

	"Code/Gel/MainLoop/Mainloop.cpp"

	"Code/Gel/Module/modman.cpp"
	"Code/Gel/Module/module.cpp"

	"Code/Gel/Movies/Movies.cpp"
	"Code/Gel/Movies/Movies.h"

	"Code/Gel/Music/music.cpp"
	"Code/Gel/Music/music.h"

	"Code/Gel/Net/App/netapp.cpp"
	"Code/Gel/Net/Client/netclnt.cpp"
	"Code/Gel/Net/Client/netclnt.h"
	"Code/Gel/Net/Dispatch/netdsptch.cpp"
	"Code/Gel/Net/Handler/nethndlr.cpp"
	"Code/Gel/Net/Server/netserv.cpp"
	"Code/Gel/Net/Server/netserv.h"
	"Code/Gel/Net/net.cpp"
	"Code/Gel/Net/net.h"
	"Code/Gel/Net/netconn.cpp"

	"Code/Gel/Object/basecomponent.cpp"
	"Code/Gel/Object/basecomponent.h"
	"Code/Gel/Object/compositeobject.cpp"
	"Code/Gel/Object/compositeobject.h"
	"Code/Gel/Object/compositeobjectmanager.cpp"
	"Code/Gel/Object/compositeobjectmanager.h"
	"Code/Gel/Object/Event.cpp"
	"Code/Gel/Object/object.cpp"
	"Code/Gel/Object/objman.cpp"
	"Code/Gel/Object/ObjPtr.cpp"
	"Code/Gel/Object/objsearch.cpp"
	"Code/Gel/Object/objtrack.cpp"
	"Code/Gel/Object/RefCounted.cpp"

	"Code/Gel/Prefs/Prefs.cpp"
	"Code/Gel/Prefs/Prefs.h"
	
	"Code/Gel/Scripting/array.cpp"
	"Code/Gel/Scripting/array.cpp"
	"Code/Gel/Scripting/checksum.cpp"
	"Code/Gel/Scripting/checksum.cpp"
	"Code/Gel/Scripting/component.cpp"
	"Code/Gel/Scripting/component.cpp"
	"Code/Gel/Scripting/debugger.cpp"
	"Code/Gel/Scripting/debugger.cpp"
	"Code/Gel/Scripting/eval.cpp"
	"Code/Gel/Scripting/eval.cpp"
	"Code/Gel/Scripting/file.cpp"
	"Code/Gel/Scripting/file.cpp"
	"Code/Gel/Scripting/init.cpp"
	"Code/Gel/Scripting/init.cpp"
	"Code/Gel/Scripting/parse.cpp"
	"Code/Gel/Scripting/parse.cpp"
	"Code/Gel/Scripting/script.cpp"
	"Code/Gel/Scripting/script.cpp"
	"Code/Gel/Scripting/scriptcache.cpp"
	"Code/Gel/Scripting/scriptcache.cpp"
	"Code/Gel/Scripting/scriptdefs.h"
	# "Code/Gel/Scripting/skiptoken.cpp"
	"Code/Gel/Scripting/string.cpp"
	"Code/Gel/Scripting/string.cpp"
	"Code/Gel/Scripting/struct.cpp"
	"Code/Gel/Scripting/struct.cpp"
	"Code/Gel/Scripting/symboltable.cpp"
	"Code/Gel/Scripting/symboltable.cpp"
	"Code/Gel/Scripting/symboltype.cpp"
	"Code/Gel/Scripting/symboltype.cpp"
	"Code/Gel/Scripting/tokens.cpp"
	"Code/Gel/Scripting/tokens.cpp"
	"Code/Gel/Scripting/utils.cpp"
	"Code/Gel/Scripting/utils.cpp"
	"Code/Gel/Scripting/vecpair.cpp"
	"Code/Gel/Scripting/vecpair.cpp"
	# "Code/Gel/Scripting/win32functions.cpp"

	"Code/Gel/SoundFX/soundfx.cpp"
	"Code/Gel/SoundFX/soundfx.h"

	"Code/Gel/Event.h"
	"Code/Gel/inpman.h"
	"Code/Gel/mainloop.h"
	"Code/Gel/modman.h"
	"Code/Gel/module.h"
	"Code/Gel/object.h"
	"Code/Gel/objman.h"
	"Code/Gel/ObjPtr.h"
	"Code/Gel/objsearch.h"
	"Code/Gel/objserv.h"
	"Code/Gel/objtrack.h"
	"Code/Gel/RefCounted.h"

	# Gfx
	"Code/Gfx/Image/ImageBasic.h"

	"Code/Gfx/2D/BlurEffect.cpp"
	"Code/Gfx/2D/BlurEffect.h"
	"Code/Gfx/2D/Element3d.cpp"
	"Code/Gfx/2D/Element3d.h"
	"Code/Gfx/2D/Menu2.cpp"
	"Code/Gfx/2D/Menu2.h"
	"Code/Gfx/2D/ScreenElement2.cpp"
	"Code/Gfx/2D/ScreenElement2.h"
	"Code/Gfx/2D/ScreenElemMan.cpp"
	"Code/Gfx/2D/ScreenElemMan.h"
	"Code/Gfx/2D/ScrollingMenu.cpp"
	"Code/Gfx/2D/ScrollingMenu.h"
	"Code/Gfx/2D/SpriteElement.cpp"
	"Code/Gfx/2D/SpriteElement.h"
	"Code/Gfx/2D/TextElement.cpp"
	"Code/Gfx/2D/TextElement.h"
	"Code/Gfx/2D/Window.cpp"
	"Code/Gfx/2D/Window.h"

	"Code/Gfx/AnimController.cpp"
	"Code/Gfx/AnimController.h"
	"Code/Gfx/baseanimcontroller.cpp"
	"Code/Gfx/baseanimcontroller.h"
	"Code/Gfx/bbox.cpp"
	"Code/Gfx/bbox.h"
	"Code/Gfx/blendchannel.cpp"
	"Code/Gfx/blendchannel.h"
	"Code/Gfx/BonedAnim.cpp"
	"Code/Gfx/BonedAnim.h"
	"Code/Gfx/BonedAnimTypes.h"
	"Code/Gfx/camera.cpp"
	"Code/Gfx/camera.h"
	"Code/Gfx/CasUtils.cpp"
	"Code/Gfx/CasUtils.h"
	"Code/Gfx/CustomAnimKey.cpp"
	"Code/Gfx/CustomAnimKey.h"
	"Code/Gfx/debuggfx.cpp"
	"Code/Gfx/debuggfx.h"
	"Code/Gfx/FaceMassage.cpp"
	"Code/Gfx/FaceMassage.h"
	"Code/Gfx/FaceTexture.cpp"
	"Code/Gfx/FaceTexture.h"
	"Code/Gfx/gfxman.cpp"
	"Code/Gfx/gfxman.h"
	"Code/Gfx/gfxutils.cpp"
	"Code/Gfx/gfxutils.h"
	"Code/Gfx/ModelAppearance.cpp"
	"Code/Gfx/ModelAppearance.h"
	"Code/Gfx/ModelBuilder.cpp"
	"Code/Gfx/ModelBuilder.h"
	"Code/Gfx/nx.cpp"
	"Code/Gfx/nx.h"
	"Code/Gfx/NxAnimCache.cpp"
	"Code/Gfx/NxAnimCache.h"
	"Code/Gfx/nxflags.h"
	"Code/Gfx/NxFont.cpp"
	"Code/Gfx/NxFont.h"
	"Code/Gfx/NxFontMan.cpp"
	"Code/Gfx/NxFontMan.h"
	"Code/Gfx/NxGeom.cpp"
	"Code/Gfx/NxGeom.h"
	"Code/Gfx/NxHierarchy.h"
	"Code/Gfx/NxImposter.cpp"
	"Code/Gfx/NxImposter.h"
	"Code/Gfx/NxLight.cpp"
	"Code/Gfx/NxLight.h"
	"Code/Gfx/NxLightMan.cpp"
	"Code/Gfx/NxLightMan.h"
	"Code/Gfx/NxLoadScreen.cpp"
	"Code/Gfx/NxLoadScreen.h"
	"Code/Gfx/NxMesh.cpp"
	"Code/Gfx/NxMesh.h"
	"Code/Gfx/NxMiscFX.cpp"
	"Code/Gfx/NxMiscFX.h"
	"Code/Gfx/NxModel.cpp"
	"Code/Gfx/NxModel.h"
	"Code/Gfx/NxNewParticle.cpp"
	"Code/Gfx/NxNewParticle.h"
	"Code/Gfx/NxNewParticleMgr.cpp"
	"Code/Gfx/NxNewParticleMgr.h"
	"Code/Gfx/nxparticle.cpp"
	"Code/Gfx/nxparticle.h"
	"Code/Gfx/nxparticlemgr.cpp"
	"Code/Gfx/nxparticlemgr.h"
	"Code/Gfx/NxQuickAnim.cpp"
	"Code/Gfx/NxQuickAnim.h"
	"Code/Gfx/NxScene.cpp"
	"Code/Gfx/NxScene.h"
	"Code/Gfx/NxSector.cpp"
	"Code/Gfx/NxSector.h"
	"Code/Gfx/NxSkinComponent.cpp"
	"Code/Gfx/NxSkinComponent.h"
	"Code/Gfx/NxSprite.cpp"
	"Code/Gfx/NxSprite.h"
	"Code/Gfx/NxTexMan.cpp"
	"Code/Gfx/NxTexMan.h"
	"Code/Gfx/NxTexture.cpp"
	"Code/Gfx/NxTexture.h"
	"Code/Gfx/NxTextured3dPoly.cpp"
	"Code/Gfx/NxTextured3dPoly.h"
	"Code/Gfx/NxViewMan.cpp"
	"Code/Gfx/NxViewMan.h"
	"Code/Gfx/NxViewport.cpp"
	"Code/Gfx/NxViewport.h"
	"Code/Gfx/nxweather.cpp"
	"Code/Gfx/nxweather.h"
	"Code/Gfx/NxWin2D.cpp"
	"Code/Gfx/NxWin2D.h"
	"Code/Gfx/Pose.h"
	"Code/Gfx/shadow.cpp"
	"Code/Gfx/shadow.h"
	"Code/Gfx/Skeleton.cpp"
	"Code/Gfx/Skeleton.h"
	"Code/Gfx/subanimcontroller.cpp"
	"Code/Gfx/subanimcontroller.h"
	"Code/Gfx/vecfont.cpp"
	"Code/Gfx/vecfont.h"

	# Sk
	"Code/Sk/Components/EditorCameraComponent.cpp"
	"Code/Sk/Components/EditorCameraComponent.h"
	"Code/Sk/Components/GoalEditorComponent.cpp"
	"Code/Sk/Components/GoalEditorComponent.cpp"
	"Code/Sk/Components/ProjectileCollisionComponent.cpp"
	"Code/Sk/Components/ProjectileCollisionComponent.cpp"
	"Code/Sk/Components/RailEditorComponent.cpp"
	"Code/Sk/Components/RailEditorComponent.cpp"
	"Code/Sk/Components/SkaterAdjustPhysicsComponent.cpp"
	"Code/Sk/Components/SkaterAdjustPhysicsComponent.cpp"
	"Code/Sk/Components/SkaterBalanceTrickComponent.cpp"
	"Code/Sk/Components/SkaterBalanceTrickComponent.cpp"
	"Code/Sk/Components/SkaterCleanupStateComponent.cpp"
	"Code/Sk/Components/SkaterCleanupStateComponent.cpp"
	"Code/Sk/Components/SkaterCorePhysicsComponent.cpp"
	"Code/Sk/Components/SkaterCorePhysicsComponent.cpp"
	"Code/Sk/Components/SkaterEndRunComponent.cpp"
	"Code/Sk/Components/SkaterEndRunComponent.cpp"
	"Code/Sk/Components/SkaterFinalizePhysicsComponent.cpp"
	"Code/Sk/Components/SkaterFinalizePhysicsComponent.cpp"
	"Code/Sk/Components/SkaterFlipAndRotateComponent.cpp"
	"Code/Sk/Components/SkaterFlipAndRotateComponent.cpp"
	"Code/Sk/Components/SkaterFloatingNameComponent.cpp"
	"Code/Sk/Components/SkaterFloatingNameComponent.cpp"
	"Code/Sk/Components/SkaterGapComponent.cpp"
	"Code/Sk/Components/SkaterGapComponent.cpp"
	"Code/Sk/Components/SkaterLocalNetLogicComponent.cpp"
	"Code/Sk/Components/SkaterLocalNetLogicComponent.cpp"
	"Code/Sk/Components/SkaterLoopingSoundComponent.cpp"
	"Code/Sk/Components/SkaterLoopingSoundComponent.cpp"
	"Code/Sk/Components/SkaterMatrixQueriesComponent.cpp"
	"Code/Sk/Components/SkaterMatrixQueriesComponent.cpp"
	"Code/Sk/Components/SkaterNonLocalNetLogicComponent.cpp"
	"Code/Sk/Components/SkaterNonLocalNetLogicComponent.cpp"
	"Code/Sk/Components/SkaterPhysicsControlComponent.cpp"
	"Code/Sk/Components/SkaterPhysicsControlComponent.cpp"
	"Code/Sk/Components/SkaterProximityComponent.cpp"
	"Code/Sk/Components/SkaterProximityComponent.cpp"
	"Code/Sk/Components/SkaterRotateComponent.cpp"
	"Code/Sk/Components/SkaterRotateComponent.cpp"
	"Code/Sk/Components/SkaterRunTimerComponent.cpp"
	"Code/Sk/Components/SkaterRunTimerComponent.cpp"
	"Code/Sk/Components/SkaterScoreComponent.cpp"
	"Code/Sk/Components/SkaterScoreComponent.cpp"
	"Code/Sk/Components/SkaterSoundComponent.cpp"
	"Code/Sk/Components/SkaterSoundComponent.cpp"
	"Code/Sk/Components/SkaterStancePanelComponent.cpp"
	"Code/Sk/Components/SkaterStancePanelComponent.cpp"
	"Code/Sk/Components/SkaterStateComponent.cpp"
	"Code/Sk/Components/SkaterStateComponent.cpp"
	"Code/Sk/Components/SkaterStateHistoryComponent.cpp"
	"Code/Sk/Components/SkaterStateHistoryComponent.cpp"

	"Code/Sk/Engine/contact.cpp"
	"Code/Sk/Engine/contact.h"
	"Code/Sk/Engine/feeler.cpp"
	"Code/Sk/Engine/feeler.h"
	"Code/Sk/Engine/RectFeeler.cpp"
	"Code/Sk/Engine/RectFeeler.h"
	"Code/Sk/Engine/sounds.cpp"
	"Code/Sk/Engine/sounds.h"
	"Code/Sk/Engine/SuperSector.cpp"
	"Code/Sk/Engine/SuperSector.h"

	"Code/Sk/GameNet/ExportMsg.h"
	"Code/Sk/GameNet/GameHandler.cpp"
	"Code/Sk/GameNet/GameMsg.h"
	"Code/Sk/GameNet/GameNet.cpp"
	"Code/Sk/GameNet/GameNet.h"
	# "Code/Sk/GameNet/Lobby.cpp"
	# "Code/Sk/GameNet/Lobby.h"
	"Code/Sk/GameNet/Player.cpp"
	"Code/Sk/GameNet/scriptdebugger.h"
	"Code/Sk/GameNet/ServerList.cpp"

	"Code/Sk/Modules/FrontEnd/FrontEnd.cpp"
	"Code/Sk/Modules/FrontEnd/FrontEnd.h"

	"Code/Sk/Modules/Skate/BettingGuy.cpp"
	"Code/Sk/Modules/Skate/BettingGuy.h"
	"Code/Sk/Modules/Skate/CATGoal.cpp"
	"Code/Sk/Modules/Skate/CATGoal.h"
	"Code/Sk/Modules/Skate/competition.cpp"
	"Code/Sk/Modules/Skate/competition.h"
	"Code/Sk/Modules/Skate/CompetitionGoal.cpp"
	"Code/Sk/Modules/Skate/CompetitionGoal.h"
	"Code/Sk/Modules/Skate/CreateATrick.cpp"
	"Code/Sk/Modules/Skate/CreateATrick.h"
	"Code/Sk/Modules/Skate/FilmGoal.cpp"
	"Code/Sk/Modules/Skate/FilmGoal.h"
	"Code/Sk/Modules/Skate/FindGapsGoal.cpp"
	"Code/Sk/Modules/Skate/FindGapsGoal.h"
	"Code/Sk/Modules/Skate/GameFlow.cpp"
	"Code/Sk/Modules/Skate/GameFlow.h"
	"Code/Sk/Modules/Skate/GameMode.cpp"
	"Code/Sk/Modules/Skate/GameMode.h"
	"Code/Sk/Modules/Skate/Goal.cpp"
	"Code/Sk/Modules/Skate/Goal.h"
	"Code/Sk/Modules/Skate/GoalManager.cpp"
	"Code/Sk/Modules/Skate/GoalManager.h"
	"Code/Sk/Modules/Skate/GoalPed.cpp"
	"Code/Sk/Modules/Skate/GoalPed.h"
	"Code/Sk/Modules/Skate/horse.cpp"
	"Code/Sk/Modules/Skate/horse.h"
	"Code/Sk/Modules/Skate/HorseGoal.cpp"
	"Code/Sk/Modules/Skate/HorseGoal.h"
	"Code/Sk/Modules/Skate/Minigame.cpp"
	"Code/Sk/Modules/Skate/Minigame.h"
	"Code/Sk/Modules/Skate/NetGoal.cpp"
	"Code/Sk/Modules/Skate/NetGoal.h"
	"Code/Sk/Modules/Skate/RaceGoal.cpp"
	"Code/Sk/Modules/Skate/RaceGoal.h"
	"Code/Sk/Modules/Skate/score.cpp"
	"Code/Sk/Modules/Skate/score.h"
	"Code/Sk/Modules/Skate/skate.cpp"
	"Code/Sk/Modules/Skate/skate.h"
	"Code/Sk/Modules/Skate/skatenet.cpp"
	"Code/Sk/Modules/Skate/SkatetrisGoal.cpp"
	"Code/Sk/Modules/Skate/SkatetrisGoal.h"
	"Code/Sk/Modules/Skate/VictoryCond.cpp"
	"Code/Sk/Modules/Skate/VictoryCond.h"
	
	"Code/Sk/Modules/Viewer/Viewer.cpp"
	"Code/Sk/Modules/Viewer/Viewer.h"

	"Code/Sk/Objects/car.cpp"
	"Code/Sk/Objects/car.h"
	"Code/Sk/Objects/crown.cpp"
	"Code/Sk/Objects/crown.h"
	"Code/Sk/Objects/cutscenedetails.cpp"
	"Code/Sk/Objects/cutscenedetails.h"
	"Code/Sk/Objects/emitter.cpp"
	"Code/Sk/Objects/emitter.h"
	"Code/Sk/Objects/followob.cpp"
	"Code/Sk/Objects/FollowOb.h"
	"Code/Sk/Objects/GameObj.cpp"
	"Code/Sk/Objects/GameObj.h"
	"Code/Sk/Objects/gap.cpp"
	"Code/Sk/Objects/gap.h"
	"Code/Sk/Objects/manual.cpp"
	"Code/Sk/Objects/manual.h"
	"Code/Sk/Objects/moviecam.cpp"
	"Code/Sk/Objects/moviecam.h"
	"Code/Sk/Objects/moviedetails.cpp"
	"Code/Sk/Objects/moviedetails.h"
	"Code/Sk/Objects/MovingObject.cpp"
	"Code/Sk/Objects/MovingObject.h"
	# "Code/Sk/Objects/navigation.cpp"
	# "Code/Sk/Objects/navigation.h"
	"Code/Sk/Objects/objecthook.cpp"
	"Code/Sk/Objects/objecthook.h"
	"Code/Sk/Objects/PathMan.cpp"
	"Code/Sk/Objects/PathMan.h"
	"Code/Sk/Objects/PathOb.cpp"
	"Code/Sk/Objects/PathOb.h"
	"Code/Sk/Objects/ped.cpp"
	"Code/Sk/Objects/ped.h"
	"Code/Sk/Objects/PlayerProfileManager.cpp"
	"Code/Sk/Objects/PlayerProfileManager.h"
	"Code/Sk/Objects/proxim.cpp"
	"Code/Sk/Objects/proxim.h"
	"Code/Sk/Objects/rail.cpp"
	"Code/Sk/Objects/rail.h"
	"Code/Sk/Objects/records.cpp"
	"Code/Sk/Objects/records.h"
	"Code/Sk/Objects/restart.cpp"
	"Code/Sk/Objects/restart.h"
	"Code/Sk/Objects/skater.cpp"
	"Code/Sk/Objects/skater.h"
	"Code/Sk/Objects/SkaterButton.cpp"
	"Code/Sk/Objects/SkaterButton.h"
	"Code/Sk/Objects/skatercam.cpp"
	"Code/Sk/Objects/skatercam.h"
	"Code/Sk/Objects/skatercareer.cpp"
	"Code/Sk/Objects/skatercareer.h"
	"Code/Sk/Objects/skaterflags.h"
	"Code/Sk/Objects/skaterpad.cpp"
	"Code/Sk/Objects/SkaterPad.h"
	"Code/Sk/Objects/SkaterProfile.cpp"
	"Code/Sk/Objects/SkaterProfile.h"
	"Code/Sk/Objects/SkaterTricks.cpp"
	"Code/Sk/Objects/SkaterTricks.h"
	"Code/Sk/Objects/TrickObject.cpp"
	"Code/Sk/Objects/TrickObject.h"
	"Code/Sk/Objects/ViewerObj.cpp"
	"Code/Sk/Objects/ViewerObj.h"

	"Code/Sk/ParkEditor/EdRail.cpp"
	"Code/Sk/ParkEditor/EdRail.h"

	"Code/Sk/ParkEditor2/clipboard.cpp"
	"Code/Sk/ParkEditor2/clipboard.cpp"
	"Code/Sk/ParkEditor2/EdMap.cpp"
	"Code/Sk/ParkEditor2/EdMap.h"
	"Code/Sk/ParkEditor2/GapManager.cpp"
	"Code/Sk/ParkEditor2/GapManager.h"
	"Code/Sk/ParkEditor2/ParkEd.cpp"
	"Code/Sk/ParkEditor2/ParkEd.h"
	"Code/Sk/ParkEditor2/ParkGen.cpp"
	"Code/Sk/ParkEditor2/ParkGen.h"

	"Code/Sk/Scripting/cfuncs.cpp"
	"Code/Sk/Scripting/cfuncs.h"
	"Code/Sk/Scripting/ftables.cpp"
	"Code/Sk/Scripting/ftables.h"
	"Code/Sk/Scripting/gs_file.cpp"
	"Code/Sk/Scripting/gs_file.h"
	"Code/Sk/Scripting/gs_init.cpp"
	"Code/Sk/Scripting/gs_init.h"
	"Code/Sk/Scripting/mcfuncs.cpp"
	"Code/Sk/Scripting/mcfuncs.h"
	"Code/Sk/Scripting/nodearray.cpp"
	"Code/Sk/Scripting/nodearray.h"
	"Code/Sk/Scripting/skfuncs.cpp"
	"Code/Sk/Scripting/skfuncs.h"

	"Code/Sk/heap_sizes.h"
	"Code/Sk/language.h"
	"Code/Sk/Main.cpp"
	"Code/Sk/product_codes.h"
	# "Code/Sk/template.h"

	# Sys
	"Code/Sys/Config/config.cpp"
	"Code/Sys/Config/config.h"

	"Code/Sys/File/AsyncFilesys.cpp"
	"Code/Sys/File/AsyncFilesys.h"
	"Code/Sys/File/AsyncTypes.h"
	"Code/Sys/File/FileLibrary.cpp"
	"Code/Sys/File/FileLibrary.h"
	"Code/Sys/File/filesys.h"
	"Code/Sys/File/memfile.h"
	"Code/Sys/File/pip.cpp"
	"Code/Sys/File/pip.h"
	"Code/Sys/File/PRE.cpp"
	"Code/Sys/File/PRE.h"

	"Code/Sys/Mem/alloc.cpp"
	"Code/Sys/Mem/alloc.h"
	"Code/Sys/Mem/CompactPool.cpp"
	"Code/Sys/Mem/CompactPool.h"
	"Code/Sys/Mem/handle.h"
	"Code/Sys/Mem/heap.cpp"
	"Code/Sys/Mem/heap.h"
	"Code/Sys/Mem/memdbg.h"
	"Code/Sys/Mem/memman.cpp"
	"Code/Sys/Mem/memman.h"
	"Code/Sys/Mem/memptr.h"
	# "Code/Sys/Mem/memtest.cpp"
	# "Code/Sys/Mem/memtest.h"
	"Code/Sys/Mem/pile.cpp"
	"Code/Sys/Mem/pile.h"
	"Code/Sys/Mem/pool.cpp"
	"Code/Sys/Mem/pool.h"
	"Code/Sys/Mem/Poolable.cpp"
	"Code/Sys/Mem/Poolable.h"
	"Code/Sys/Mem/PoolManager.cpp"
	"Code/Sys/Mem/PoolManager.h"
	"Code/Sys/Mem/region.cpp"
	"Code/Sys/Mem/region.h"

	"Code/Sys/Replay/replay.cpp"
	"Code/Sys/Replay/replay.h"

	"Code/Sys/SIO/keyboard.h"
	# "Code/Sys/SIO/siodev.cpp"
	# "Code/Sys/SIO/sioman.cpp"
)

target_link_libraries(TonyRE PRIVATE TonyRE.Common)

# Include miniaudio
target_include_directories(TonyRE.Common INTERFACE "External/miniaudio")

# Compile GameSpy SDK
add_subdirectory("GameSpy" EXCLUDE_FROM_ALL)
target_link_libraries(TonyRE PRIVATE GameSpy)

# Send compiled executable to Game folder
set(BUILD_DIRECTORY ${CMAKE_SOURCE_DIR}/Game)
set_target_properties(TonyRE PROPERTIES
	RUNTIME_OUTPUT_DIRECTORY ${BUILD_DIRECTORY}
	RUNTIME_OUTPUT_DIRECTORY_RELEASE ${BUILD_DIRECTORY}
	RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL ${BUILD_DIRECTORY}
	RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${BUILD_DIRECTORY}
	RUNTIME_OUTPUT_DIRECTORY_DEBUG ${BUILD_DIRECTORY}
)

# Platform select
if(TRUE) # If WIN32
	# Compile libraries
	add_subdirectory("External/SDL" EXCLUDE_FROM_ALL)
	add_subdirectory("External/glad" EXCLUDE_FROM_ALL)
	add_subdirectory("External/glm" EXCLUDE_FROM_ALL)

	# Compile Win32 platform
	add_subdirectory("Wn32" EXCLUDE_FROM_ALL)
	target_link_libraries(TonyRE PRIVATE TonyRE.Wn32)
endif()
